// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTimePicker.js Render component and match snapshot(s) format - hello-world 1`] = `

<div class="card picker picker--time picker--time--hours theme--light"
     style="height: auto;"
>
  <div class="picker__title">
    <div class="picker--time__title">
      <span class="active">
        03
      </span>
      <span class>
        :04
      </span>
    </div>
  </div>
  <div class="picker__body">
    <div class="picker--time__clock">
      <div class="picker--time__clock-hand hour">
      </div>
      <span class>
        <span>
          0
        </span>
      </span>
      <span class>
        <span>
          1
        </span>
      </span>
      <span class>
        <span>
          2
        </span>
      </span>
      <span class="active">
        <span>
          3
        </span>
      </span>
      <span class>
        <span>
          4
        </span>
      </span>
      <span class>
        <span>
          5
        </span>
      </span>
      <span class>
        <span>
          6
        </span>
      </span>
      <span class>
        <span>
          7
        </span>
      </span>
      <span class>
        <span>
          8
        </span>
      </span>
      <span class>
        <span>
          9
        </span>
      </span>
      <span class>
        <span>
          10
        </span>
      </span>
      <span class>
        <span>
          11
        </span>
      </span>
      <span class>
        <span>
          12
        </span>
      </span>
      <span class>
        <span>
          13
        </span>
      </span>
      <span class>
        <span>
          14
        </span>
      </span>
      <span class>
        <span>
          15
        </span>
      </span>
      <span class>
        <span>
          16
        </span>
      </span>
      <span class>
        <span>
          17
        </span>
      </span>
      <span class>
        <span>
          18
        </span>
      </span>
      <span class>
        <span>
          19
        </span>
      </span>
      <span class>
        <span>
          20
        </span>
      </span>
      <span class>
        <span>
          21
        </span>
      </span>
      <span class>
        <span>
          22
        </span>
      </span>
      <span class>
        <span>
          23
        </span>
      </span>
    </div>
  </div>
</div>

`;

exports[`VTimePicker.js Render component and match snapshot(s) only defaults 1`] = `

<div class="card picker picker--time picker--time--hours theme--light"
     style="height: auto;"
>
  <div class="picker__title">
    <div class="picker--time__title">
      <span class="active">
        3
      </span>
      <span class>
        :04
      </span>
    </div>
    <div>
      <span class="active">
        AM
      </span>
      <span class>
        PM
      </span>
    </div>
  </div>
  <div class="picker__body">
    <div class="picker--time__clock">
      <div class="picker--time__clock-hand hour">
      </div>
      <span class>
        <span>
          1
        </span>
      </span>
      <span class>
        <span>
          2
        </span>
      </span>
      <span class="active">
        <span>
          3
        </span>
      </span>
      <span class>
        <span>
          4
        </span>
      </span>
      <span class>
        <span>
          5
        </span>
      </span>
      <span class>
        <span>
          6
        </span>
      </span>
      <span class>
        <span>
          7
        </span>
      </span>
      <span class>
        <span>
          8
        </span>
      </span>
      <span class>
        <span>
          9
        </span>
      </span>
      <span class>
        <span>
          10
        </span>
      </span>
      <span class>
        <span>
          11
        </span>
      </span>
      <span class>
        <span>
          12
        </span>
      </span>
    </div>
  </div>
</div>

`;

exports[`VTimePicker.js should accept a date object for a value 1`] = `

<div class="card picker picker--time picker--time--hours theme--light"
     style="height: auto;"
>
  <div class="picker__title">
    <div class="picker--time__title">
      <span class="active">
        12
      </span>
      <span class>
        :00
      </span>
    </div>
    <div>
      <span class="active">
        AM
      </span>
      <span class>
        PM
      </span>
    </div>
  </div>
  <div class="picker__body">
    <div class="picker--time__clock">
      <div class="picker--time__clock-hand hour">
      </div>
      <span class>
        <span>
          1
        </span>
      </span>
      <span class>
        <span>
          2
        </span>
      </span>
      <span class>
        <span>
          3
        </span>
      </span>
      <span class>
        <span>
          4
        </span>
      </span>
      <span class>
        <span>
          5
        </span>
      </span>
      <span class>
        <span>
          6
        </span>
      </span>
      <span class>
        <span>
          7
        </span>
      </span>
      <span class>
        <span>
          8
        </span>
      </span>
      <span class>
        <span>
          9
        </span>
      </span>
      <span class>
        <span>
          10
        </span>
      </span>
      <span class>
        <span>
          11
        </span>
      </span>
      <span class="active">
        <span>
          12
        </span>
      </span>
    </div>
  </div>
</div>

`;

exports[`VTimePicker.js should accept a value 1`] = `

<div class="card picker picker--time picker--time--hours theme--light"
     style="height: auto;"
>
  <div class="picker__title">
    <div class="picker--time__title">
      <span class="active">
        9
      </span>
      <span class>
        :00
      </span>
    </div>
    <div>
      <span class="active">
        AM
      </span>
      <span class>
        PM
      </span>
    </div>
  </div>
  <div class="picker__body">
    <div class="picker--time__clock">
      <div class="picker--time__clock-hand hour">
      </div>
      <span class>
        <span>
          1
        </span>
      </span>
      <span class>
        <span>
          2
        </span>
      </span>
      <span class>
        <span>
          3
        </span>
      </span>
      <span class>
        <span>
          4
        </span>
      </span>
      <span class>
        <span>
          5
        </span>
      </span>
      <span class>
        <span>
          6
        </span>
      </span>
      <span class>
        <span>
          7
        </span>
      </span>
      <span class>
        <span>
          8
        </span>
      </span>
      <span class="active">
        <span>
          9
        </span>
      </span>
      <span class>
        <span>
          10
        </span>
      </span>
      <span class>
        <span>
          11
        </span>
      </span>
      <span class>
        <span>
          12
        </span>
      </span>
    </div>
  </div>
</div>

`;

exports[`VTimePicker.js should change am/pm when updated from model 1`] = `

<div class="card picker picker--time picker--time--hours theme--light"
     style="height: auto;"
>
  <div class="picker__title">
    <div class="picker--time__title">
      <span class="active">
        9
      </span>
      <span class>
        :00
      </span>
    </div>
    <div>
      <span class>
        AM
      </span>
      <span class="active">
        PM
      </span>
    </div>
  </div>
  <div class="picker__body">
    <div class="picker--time__clock">
      <div class="picker--time__clock-hand hour">
      </div>
      <span class>
        <span>
          1
        </span>
      </span>
      <span class>
        <span>
          2
        </span>
      </span>
      <span class>
        <span>
          3
        </span>
      </span>
      <span class>
        <span>
          4
        </span>
      </span>
      <span class>
        <span>
          5
        </span>
      </span>
      <span class>
        <span>
          6
        </span>
      </span>
      <span class>
        <span>
          7
        </span>
      </span>
      <span class>
        <span>
          8
        </span>
      </span>
      <span class="active">
        <span>
          9
        </span>
      </span>
      <span class>
        <span>
          10
        </span>
      </span>
      <span class>
        <span>
          11
        </span>
      </span>
      <span class>
        <span>
          12
        </span>
      </span>
    </div>
  </div>
</div>

`;
